# holo-host

./: .env  .env.example  .envrc  .gitignore  .sops.yaml  Cargo.toml  Justfile  README.md  deno.json  docker-compose.yml  dockerfile  flake.nix  key  key.pub  rust-toolchain.toml  setup-hooks.sh  supported-holochain-versions.json  test_sys.jwt
container/: Cargo.toml
container/sample/: app1.dna.json
container/src/: main.rs  util.rs  ws.rs.blah  ws_rpc.rs  ws_server.rs
rust/clients/host_agent/: Cargo.toml  build.rs  host_temp_dir  output_dir.host.jwt  output_dir.host_sys.jwt  test_leaf_server
rust/clients/host_agent/src/: agent_cli.rs  gen_leaf_server.rs  host_client.rs  host_cmds.rs  keys.rs  main.rs  support_cmds.rs  types.rs  utils.rs  workload_manager.rs  workloads.rs
rust/clients/host_agent/src/auth/: agent_key.rs  client.rs  config.rs  endpoints.rs  init.rs  init_agent.rs  initialize.rs  initializer.rs  keys.rs  mod.rs  service.rs  utils.rs
rust/clients/host_agent/src/hostd/: client.rs  gen_leaf_server.rs  host_client.rs  hpos_updates.rs  inventory.rs  leaf_server_generator.rs  mod.rs  utils.rs  workload.rs  workload_manager.rs  workloads.rs
rust/clients/host_agent/src/local_cmds/: mod.rs
rust/clients/host_agent/src/remote_cmds/: errors.rs  mod.rs  types.rs
rust/clients/host_agent/src/workloads/: endpoints.rs  manager.rs  mod.rs
rust/clients/orchestrator/: Cargo.toml
rust/clients/orchestrator/src/: admin_client.rs  auth.rs  config.rs  endpoints.rs  errors.rs  hpos_updates.rs  inventory.rs  lib.rs  main.rs  orchestrator.rs  utils.rs  workloads.rs
rust/clients/orchestrator/src/admin/: inventory.rs  mod.rs  utils.rs  workloads.rs
rust/clients/orchestrator/src/auth/: auth.rs  controller.rs  endpoints.rs  mod.rs  service.rs  utils.rs
rust/clients/orchestrator/src/extern_api/: example.rs  mod.rs
rust/clients/orchestrator/src/nats_clients/: admin.rs  auth.rs  mod.rs
rust/clients/orchestrator/src/nats_services/: auth.rs  mod.rs  utils.rs  workloads.rs
rust/clients/orchestrator/src/tests/: inventory.rs  mod.rs  workloads.rs
rust/clients/orchestrator/src/types/: config.rs  mod.rs
rust/clients/orchestrator/src/workloads/: controller.rs  endpoints.rs  mod.rs
rust/ham/: Cargo.toml
rust/ham/src/: lib.rs  main.rs
rust/holo-blobstore/: Cargo.toml
rust/holo-blobstore/src/: lib.rs  tests.rs
rust/holo-dns/: Cargo.toml  dockerfile  test.json
rust/holo-dns/src/: dns_cache.rs  dns_service.rs  lib.rs  tests.rs
rust/holo-gateway/: Cargo.toml  dockerfile  gen-test-cert  openssl.cnf
rust/holo-gateway/src/: lib.rs  main.rs  nats_client.rs  types.rs
rust/holo-gateway/src/routes/: gateway.rs  mod.rs
rust/holo-gateway/src/tests/: gateway.rs  mod.rs  routes.rs
rust/holo-gateway/src/types/: error.rs  http.rs  mod.rs  nats.rs
rust/holo-public-api/: .env.example  Cargo.toml  docker-compose.yml  dockerfile  readme.md
rust/holo-public-api/docs/: auth.md  contribute.md
rust/holo-public-api/scripts/: dev.sh  test.sh
rust/holo-public-api/src/: main.rs
rust/holo-public-api/src/controllers/: mod.rs
rust/holo-public-api/src/controllers/apikey/: apikey_dto.rs  create_apikey.rs  delete_apikey.rs  get_apikey.rs  get_multiple_apikey.rs  mod.rs  update_apikey.rs
rust/holo-public-api/src/controllers/auth/: auth_dto.rs  email_verify.rs  email_verify_check.rs  forgot_password.rs  login_apikey.rs  login_password.rs  login_refresh.rs  login_response.rs  login_with_api_key.rs  logout_all.rs  mod.rs  refresh.rs  register.rs
rust/holo-public-api/src/controllers/blob/: create.rs  (+2 more)
rust/holo-public-api/src/middleware/: auth.rs  logging.rs  mod.rs
rust/holo-public-api/src/middlewares/: auth.rs  limiter.rs  logging.rs  mod.rs
rust/holo-public-api/src/providers/: auth.rs  cache.rs  config.rs  crud.rs  docs.rs  error_response.rs  limiter.rs  mod.rs  object_storage.rs  pagination.rs  permissions.rs  postmark.rs  user.rs
rust/holo-public-api/src/scheduler/: mod.rs  push_logs.rs
rust/holo-public-api/src/tests/: utils.rs
rust/hpos-hal/: Cargo.toml  README.md
rust/hpos-hal/src/: fs.rs  inventory.rs  leds.rs  lib.rs  sysfs.rs  tests.rs
rust/netdiag/: Cargo.toml  sample-config.yaml
rust/netdiag/src/: lib.rs
rust/orchestrator/: Cargo.toml
rust/orchestrator/src/: hello.rs  main.rs
rust/services/authentication/: Cargo.toml
rust/services/authentication/src/: host_api.rs  lib.rs  orchestrator_api.rs  types.rs  utils.rs
rust/services/hpos_updates/: Cargo.toml
rust/services/hpos_updates/src/: host_api.rs  lib.rs  orchestrator_api.rs  types.rs  utils.rs
rust/services/inventory/: Cargo.toml
rust/services/inventory/src/: lib.rs  types.rs
rust/services/workload/: Cargo.toml
rust/services/workload/src/: host_api.rs  lib.rs  orchestrator_api.rs  types.rs
rust/util_libs/: Cargo.toml
rust/util_libs/db/: Cargo.toml
rust/util_libs/db/src/: mongodb.rs  schemas.rs
rust/util_libs/jwt/: ADCBACYBAODZ4WRB4U6AXJL7OGYUD5T3ECODO7VYG3BMCR53J7ZP2T4E.jwt  ADWIRN2TTIM3CDTYLRM6NPSJW7LRR3A27UJXG3TWVYVK35EPF4HI4MBP.jwt
rust/util_libs/mocks/: Cargo.toml
rust/util_libs/mocks/src/: gen_leaf_agents.rs  host.rs  lib.rs  mongodb_runner.rs  nats_message.rs  service_test_response.rs  test_nats_server.rs  test_service_response.rs  workload.rs
rust/util_libs/nats/: Cargo.toml
rust/util_libs/nats/src/: jetstream_client.rs  jetstream_service.rs  leaf_server.rs  lib.rs  macros.rs  types.rs
rust/util_libs/nsc_client/: Cargo.toml
rust/util_libs/nsc_client/src/: lib.rs
rust/util_libs/nsc_proxy_server/: Cargo.toml
rust/util_libs/nsc_proxy_server/src/: main.rs
rust/util_libs/squashfs/: Cargo.toml
rust/util_libs/squashfs/src/: lib.rs  tests.rs
rust/util_libs/src/: js_microservice.rs  js_stream_service.rs  lib.rs  nats_client.rs  nats_js_client.rs  nats_server.rs  nats_types.rs
rust/util_libs/src/db/: mod.rs  mongodb.rs  schemas.rs
rust/util_libs/src/microservices/: jetstream.rs
rust/util_libs/src/nats/: jetstream_client.rs  jetstream_service.rs  leaf_server.rs  mod.rs  types.rs
rust/util_libs/test_configs/: hub_server.conf  hub_server_pw_auth.conf
(+306 files in other folders)
