[workspace]
resolver = "2"
package.version = "0.1.0"
metadata.crane.name = "holo-host-workspace"

members = [
  "rust/ham",
  "rust/hpos-hal",
  "rust/clients/host_agent",
  "rust/clients/orchestrator",
  "rust/services/inventory",
  "rust/services/workload",
  "rust/util_libs/nats",
  "rust/util_libs/db",
  "rust/util_libs/mocks",
  "rust/netdiag",

  "rust/holochain_zome_testing_0",
  "rust/holochain_zome_testing_0_integrity",
]

[workspace.dependencies]
async-nats = { version = "0.38.0", features = ["service"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.23", features = ["derive"] }
thiserror = "2.0"
thiserror-context = "0.1"
futures = "0.3.31"
anyhow = "1.0"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.133"
dotenv = "0.15.0"
env_logger = "0.11.0"
log = "0.4.17"
netdiag = { path = "rust/netdiag" }
hpos-hal = { path = "rust/hpos-hal" }
mock_utils = { path = "rust/util_libs/mocks" }
nats_utils = { path = "rust/util_libs/nats" }
db_utils = { path = "rust/util_libs/db" }
orchestrator = { path = "rust/clients/orchestrator" }
host_agent = { path = "rust/clients/host_agent" }
inventory = { path = "rust/services/inventory" }
workload = { path = "rust/services/workload" }

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
