cargo-features = ["default-run"]

[package]
name = "holo-container"
version = "0.1.0"
authors = ["Michael Dougherty <michael.dougherty@holo.host>"]
default-run = "holo-container"

[dependencies]
holochain_agent = { git = "https://github.com/holochain/holochain-rust", branch = "develop" }
holochain_cas_implementations = { git = "https://github.com/holochain/holochain-rust", branch = "develop" }
holochain_core = { git = "https://github.com/holochain/holochain-rust", branch = "develop" }
holochain_core_api = { git = "https://github.com/holochain/holochain-rust", branch = "develop" }
holochain_core_types = { git = "https://github.com/holochain/holochain-rust", branch = "develop" }
holochain_dna = { git = "https://github.com/holochain/holochain-rust", branch = "develop" }
