[package]
name = "ham"
version = "0.1.0"
edition = "2021"
authors = ["zo-el <joelulahanna@gmaail.com>"]
description = "Holochain App Manager - Simple app installation utility"

[dependencies]
anyhow = { workspace = true}
holochain_types = "0.4.1"
holochain_conductor_api = "0.4.1"
holochain_client = "0.6.0"
tokio = { workspace = true }
tracing = "0.1"
clap = { workspace = true }
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["blocking"] }
tempfile = "3.1"
url = "2.5"

# [dev-dependencies]
# holochain_env_setup = { path = "../holochain_env_setup" }
# tempfile = "3.1"
# tracing-subscriber = "0.3"
