[package]
name = "ham"
version = "0.1.0"
edition = "2021"
authors = ["zo-el <joelulahanna@gmaail.com>"]
description = "Holochain App Manager - Simple app installation utility"

[lib]
path = "src/lib.rs"

[[bin]]
name = "ham"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
holochain_types = "0.4.1"
holochain_conductor_api = "0.4.2"
holochain_client = "0.6.2"
tokio = { workspace = true }
tracing = "0.1"
clap = { workspace = true }
tracing-subscriber = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
tempfile = "3.1"
url = "2.5"
serde = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22.1"
derive_builder = "0.20.2"
log = { workspace = true }
bytes = { workspace = true }

# [dev-dependencies]
# holochain_env_setup = { path = "../holochain_env_setup" }
# tempfile = "3.1"
# tracing-subscriber = "0.3"
