[package]
name = "holo-dns"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "holo-dns"
path = "bin/holo-dns.rs"


[dependencies]
# I have an open merge request with the upstream package maintainer for the NS record changes.
# Once merged and a new crate is published, we ought to be able to use crate v0.2.5 instead of
# the gitlab link below.
#dns-server = "0.2.4"
dns-server = { git = "https://gitlab.com/matt.geddes/ops.git", branch = "add-in-ns-rr" }
env_logger = { workspace = true }
log = { workspace = true }
permit = "0.2.1"
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
signal-hook = "0.3.17"
tokio = { workspace = true }
mongodb = { workspace = true }
thiserror = { workspace = true }
db_utils = { path = "../util_libs/db" }
nats_utils = { path = "../util_libs/nats" }

[dev-dependencies]
tempfile = "3.19.0"
