[package]
name = "hpos-hal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "holo-inventory"
path = "bin/holo-inventory.rs"

[dependencies]
binrw = "0.14"
env_logger = "0.11.5"
glob = "0.3.1"
log = "0.4.22"
procfs = "0.17.0"
serde = "1.0.213"
serde_derive = "1.0.213"
serde_json = "1.0.132"
test-files = "0.1.2"
thiserror = "2.0.3"
thiserror-context = "0.1.2"
uuid = "1.11.0"

[dev-dependencies]
env_logger = "0.11.5"
assert_cmd = "2.0.16"

[features]
tests_sudo = []
