[package]
name = "hpos-hal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "holo-inventory"
path = "bin/holo-inventory.rs"

[dependencies]
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
thiserror-context = { workspace = true }
binrw = "0.14"
glob = "0.3.1"
procfs = "0.17.0"
test-files = "0.1.2"
uuid = "1.11.0"

[dev-dependencies]
env_logger = "0.11.5"
assert_cmd = "2.0.16"

[features]
tests_sudo = []
