[package]
name = "actix-test"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
utoipa = { version = "5", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9", features = [
    "actix-web",

    # Enables vendored Swagger UI via utoipa-swagger-ui-vendored crate.
    "vendored"
]}
serde = "1.0.188"
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}

[dependencies.mongodb]
version = "3.1.0"
