[package]
name = "orchestrator"
version = "0.0.1"
edition = "2021"

[dependencies]
async-nats = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
dotenv = { workspace = true }
thiserror = { workspace = true }
url = { version = "2", features = ["serde"] }
bson = { version = "2.6.1", features = ["chrono-0_4"] }
serde_with = { version = "3.1", features = ["macros"] }
env_logger = { workspace = true }
mongodb = "3.1.0"
strum_macros = "0.25"
chrono = "0.4.0"
bytes = "1.8.0"
nkeys = "=0.4.4"
actix-web = "4"
utoipa-swagger-ui = { version = "9", features = [
  "actix-web",
  # Enables vendored Swagger UI via utoipa-swagger-ui-vendored crate.
  "vendored",
] }
utoipa = { version = "5", features = ["actix_extras"] }
nats_utils = { path = "../../util_libs/nats" }
db_utils = { path = "../../util_libs/db" }
workload = { path = "../../services/workload" }
inventory = { path = "../../services/inventory" }

[dev-dependencies]
tempfile = "3.14"
serial_test = "2.0"
rand = "0.9.0"
mock_utils = { path = "../../util_libs/mocks" }
