[package]
name = "authentication"
version = "0.0.1"
edition = "2021"

[dependencies]
async-nats = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true } 
env_logger = { workspace = true }
log = { workspace = true }
dotenv = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1.83"
mongodb = "3.1"
bson = { version = "2.6.1", features = ["chrono-0_4"] }
url = { version = "2", features = ["serde"] }
nkeys = "=0.4.4"
bytes = "1.8.0"
chrono = "0.4.0"
util_libs = { path = "../../util_libs" }