[package]
name = "authentication"
version = "0.0.1"
edition = "2021"

[dependencies]
async-nats = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true } 
env_logger = { workspace = true }
log = { workspace = true }
dotenv = { workspace = true }
thiserror = { workspace = true }
bson = { version = "2.6.1", features = ["chrono-0_4"] }
url = { version = "2", features = ["serde"] }
async-trait = "0.1.83"
mongodb = "3.1"
base32 = "0.5.1"
nkeys = "=0.4.4"
sha2 = "=0.10.8"
nats-jwt = "0.3.0"
data-encoding = "2.7.0"
jsonwebtoken = "9.3.0"
bytes = "1.8.0"
chrono = "0.4.0"
nats_utils = { path = "../../util_libs/nats" }
db_utils = { path = "../../util_libs/db" }
inventory = { path = "../../services/inventory" }
