[package]
name = "hpos_updates"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
async-nats = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
db_utils = { workspace = true }
nats_utils = { workspace = true }
hpos-hal = { workspace = true }
env_logger = { workspace = true }
bson = { version = "2.6.1", features = ["chrono-0_4"] }
mongodb = "3.1"
base32 = "0.5.1"
nkeys = "=0.4.4"
sha2 = "=0.10.8"
nats-jwt = "0.3.0"
data-encoding = "2.7.0"
jsonwebtoken = "9.3.0"
bytes = "1.8.0"

[dev-dependencies]
tempfile = "3.8"
ctor = "0.2"
serial_test = "2.0"
dotenv = { workspace = true }
mock_utils = { workspace = true }

[features]
tests_integration_inventory_service = []
