[package]
name = "hpos_updates"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
async-nats = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
db_utils = { workspace = true }
nats_utils = { workspace = true }
env_logger = { workspace = true }
bson = { version = "2.6.1", features = ["chrono-0_4"] }
async-trait = "0.1.83"
mongodb = "3.1"
strum_macros = "0.25"
data-encoding = "2.7.0"
jsonwebtoken = "9.3.0"
bytes = "1.8.0"

[dev-dependencies]
mock_utils = { workspace = true }

