[package]
name = "inventory"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
async-nats = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bson = { version = "2.6.1", features = ["chrono-0_4"] }
mongodb = "3.1"
base32 = "0.5.1"
nkeys = "=0.4.4"
sha2 = "=0.10.8"
nats-jwt = "0.3.0"
data-encoding = "2.7.0"
jsonwebtoken = "9.3.0"
bytes = "1.8.0"
db_utils = { path = "../../util_libs/db" }
nats_utils = { path = "../../util_libs/nats" }
hpos-hal = { path = "../../hpos-hal" }

[dev-dependencies]
tempfile = "3.8"
mock_utils = { path = "../../util_libs/mocks" }

