[package]
name = "workload"
version = "0.0.1"
edition = "2021"

[dependencies]
async-nats = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
dotenv = { workspace = true }
thiserror = { workspace = true }
strum = "0.25"
strum_macros = "0.25"
async-trait = "0.1.83"
semver = "1.0.24"
rand = "0.8.5"
mongodb = "3.1"
bson = { version = "2.6.1", features = ["chrono-0_4"] }
url = { version = "2", features = ["serde"] }
bytes = "1.8.0"
nkeys = "=0.4.4"
chrono = "0.4.0"
util_libs = { path = "../../util_libs" }

[dev-dependencies]
tempfile = "3.8"
serde_json = "1.0"
