
[package]
name = "workload"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
async-nats = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
dotenv = { workspace = true }
thiserror = { workspace = true }
strum = "0.25"
strum_macros = "0.25"
async-trait = "0.1.83"
semver = "1.0.24"
rand = "0.8.5"
mongodb = { version = "3.1", features = ["sync"] }
bson = { version = "2.6.1", features = ["chrono-0_4"] }
url = { version = "2", features = ["serde"] }
bytes = "1.8.0"
nkeys = "=0.4.4"
chrono = "0.4.0"
db_utils = { path = "../../util_libs/db" }
nats_utils = { path = "../../util_libs/nats" }
hpos-hal = { path = "../../hpos-hal" }

[dev-dependencies]
serde_json = "1.0"
mock_utils = { path = "../../util_libs/mocks" }

[features]
tests_integration_workload_service = []
