[package]
name = "workload"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
async-nats = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
db_utils = { workspace = true }
nats_utils = { workspace = true }
hpos-hal = { workspace = true }
strum = "0.25"
strum_macros = "0.25"
async-trait = "0.1.83"
semver = "1.0.24"
rand = "0.8.5"
mongodb = { version = "3.1", features = ["sync"] }
bson = { version = "2.6.1", features = ["chrono-0_4"] }
url = { version = "2", features = ["serde"] }
bytes = "1.8.0"
nkeys = "=0.4.4"
chrono = "0.4.0"
ham = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
lazy_static = "1.5.0"
sha2 = "0.10"

[dev-dependencies]
dotenv = { workspace = true }
mock_utils = { workspace = true }
db_utils = { path = "../../util_libs/db" }
nats_utils = { path = "../../util_libs/nats" }
hpos-hal = { path = "../../hpos-hal" }
serial_test = "2.0"
ctor = "0.2"

[features]
tests_integration_workload_service = []
