[package]
name = "db_utils"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
async-nats = { workspace = true }
anyhow = { workspace = true }
nats-jwt = "0.3.0"
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { version = "3.1", features = ["macros"] }
semver = "1.0.24"
futures = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
dotenv = { workspace = true }
hpos-hal = { workspace = true }
nats_utils = { workspace = true }
clap = { workspace = true }
mongodb = "3.1.0"
chrono = "0.4.0"
bytes = "1.8.0"
tempfile = "3.8"
tokio-retry = "0.3.0"
async-trait = "0.1.83"
strum = { version = "0.27.1", features = ["derive"] }
sea-strum_macros = "0.23.0"
url = { version = "2", features = ["serde"] }
bson = { version = "2.6.1", features = ["chrono-0_4"] }
derive_more = { version = "1.0.0", features = ["debug"] }

[dev-dependencies]
mock_utils = { workspace = true }

[features]
tests_integration_mongodb = []
