[package]
name = "nsc_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[lib]
name = "nsc_client"
path = "src/lib.rs"

[dev-dependencies]
tokio-test = "0.4" 