[package]
name = "nsc_proxy_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nsc_proxy_server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.7"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3" 